# stonks_db

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: companies.yml  indicators.yml  sources.yml
data/: universe_tickers.txt
docs/: ARCHITECTURE.md  SCHEMA_RELATIONS.md
scripts/: build_universe.py  daily_update.sh  download_universe.py  seed_countries.py  seed_exchanges.py  seed_indicators.py  seed_sectors.py  seed_sources.py  update_all_equity.py  weekly_update.sh
src/stonks/: __init__.py  __main__.py  cli.py  config.py  db.py  logger.py
src/stonks/fetchers/: __init__.py  base.py  bonds.py  coingecko.py  commodities.py  country.py  ecb.py  fred.py  fundamentals.py  funds.py  indices.py  sentiment.py  world_bank.py  yfinance_.py  yields.py
src/stonks/models/: __init__.py  alternative.py  commodity.py  country.py  crypto.py  equity.py  fixed_income.py  forex.py  fund.py  macro.py  meta.py  ref.py
src/stonks/seed/: __init__.py  reference.py
